# tailrocks-skills

./: .gitignore  AGENTS.md  CLAUDE.md  INSTALL.md  README.md  mise.toml  plugin.json
.claude-plugin/: marketplace.json  plugin.json
.codex/: INSTALL.md
.codex-plugin/: plugin.json
.github/workflows/: validate.yml
.kimi-plugin/: plugin.json
advisor-plans/: 001-executor-contract-fixes.md  002-completeness-chain-fixes.md  003-validator-hardening.md  004-ci-workflow.md  005-eval-quality.md  006-injection-secrets-hardening.md  007-stack-skill-corrections.md  008-external-claims-verification.md  009-canonical-shared-rules.md  010-contributor-dx.md  011-example-plan-package.md  012-pipeline-walkthrough.md  013-eval-runner-spike.md  014-effort-tiers-spike.md  015-brownfield-onramp-spike.md  016-parked-and-assumptions.md  017-oss-contribute-skill.md  README.md
docs/: brownfield-onramp-design.md  effort-tiers-design.md  eval-runner-design.md  pipeline-walkthrough.md
examples/plan-package/: README.md
scripts/: run-evals.ts  validate-skills.test.ts  validate-skills.ts
skills/propose/: SKILL.md
skills/propose/agents/: openai.yaml
skills/propose/references/: enrichment-playbook.md  findings-format.md
skills/research/: SKILL.md
skills/research/agents/: openai.yaml
skills/research/references/: handoff-and-index.md  research-playbook.md
skills/rust-best-practices/: SKILL.md
skills/rust-best-practices/agents/: openai.yaml
skills/rust-best-practices/references/: errors-testing-docs.md  ownership-performance.md  readability-style-architecture.md  tooling-lints.md
skills/rust-project-setup/: SKILL.md
skills/rust-project-setup/agents/: openai.yaml
skills/rust-project-setup/references/: lints-clippy-rustfmt.md  supply-chain-and-testing.md  workspace-and-layout.md
skills/rust-project-setup/templates/: clippy.toml  deny.toml  mise.toml  rust-toolchain.toml  rustfmt.toml
skills/tailrocks-axum-best-practices/: SKILL.md
skills/tailrocks-axum-best-practices/agents/: openai.yaml
skills/tailrocks-axum-best-practices/evals/: evals.json
skills/tailrocks-axum-best-practices/references/: architecture-and-state.md  extractors-and-errors.md  lifecycle-and-testing.md  middleware-and-security.md
skills/tailrocks-blueprint/: SKILL.md
skills/tailrocks-blueprint/agents/: openai.yaml
skills/tailrocks-blueprint/evals/: evals.json
skills/tailrocks-blueprint/references/: concept-and-coverage.md  handoff-and-index.md  plan-template.md  research-playbook.md  spec-format.md
skills/tailrocks-brainstorm/: SKILL.md
skills/tailrocks-brainstorm/agents/: openai.yaml
skills/tailrocks-brainstorm/evals/: evals.json
skills/tailrocks-brainstorm/references/: grilling-method.md
skills/tailrocks-code-health/: SKILL.md
skills/tailrocks-code-health/agents/: openai.yaml
skills/tailrocks-code-health/evals/: evals.json
skills/tailrocks-code-health/references/: architecture-and-docs.md  defects-flakes-and-reports.md  ratchets-and-baselines.md  verification-lanes.md  versions-and-dependencies.md
skills/tailrocks-code-health/templates/: DEFECT_LEDGER.md  flaky-tests.toml  ratchet.toml  renovate.json
skills/tailrocks-contribute/: SKILL.md
skills/tailrocks-contribute/agents/: openai.yaml
skills/tailrocks-contribute/evals/: evals.json
skills/tailrocks-contribute/references/: etiquette-and-hard-stops.md  project-contract.md  review-response.md  submission-gate.md
skills/tailrocks-contribute/scripts/: gh-recon.ts
skills/tailrocks-correctness-first/: SKILL.md
skills/tailrocks-correctness-first/agents/: openai.yaml
skills/tailrocks-correctness-first/evals/: evals.json
skills/tailrocks-correctness-first/references/: principles-and-evidence.md
skills/tailrocks-decision/: SKILL.md
skills/tailrocks-decision/agents/: openai.yaml
skills/tailrocks-decision/evals/: evals.json
skills/tailrocks-finalize/: SKILL.md
skills/tailrocks-finalize/agents/: openai.yaml
skills/tailrocks-finalize/evals/: evals.json
skills/tailrocks-finalize/references/: readiness-and-grilling.md
skills/tailrocks-grill/: SKILL.md
skills/tailrocks-grill-roadmap/: SKILL.md
skills/tailrocks-grill-roadmap/agents/: openai.yaml
skills/tailrocks-grill-roadmap/evals/: evals.json
skills/tailrocks-grill-roadmap/references/: readiness-and-grilling.md
skills/tailrocks-grill/agents/: openai.yaml
skills/tailrocks-grill/evals/: evals.json
skills/tailrocks-grill/references/: concept-template.md  grilling-method.md
skills/tailrocks-idea/: SKILL.md
skills/tailrocks-idea/agents/: openai.yaml
skills/tailrocks-idea/evals/: evals.json
skills/tailrocks-idea/references/: roadmap-item-format.md
skills/tailrocks-plan/: SKILL.md
skills/tailrocks-plan/agents/: openai.yaml
skills/tailrocks-plan/evals/: evals.json
skills/tailrocks-plan/references/: coverage-ledger.md  goal-handoff.md  plan-template.md  research-shape.md  spec-format.md
skills/tailrocks-propose/: SKILL.md
skills/tailrocks-propose/agents/: openai.yaml
skills/tailrocks-propose/evals/: evals.json
skills/tailrocks-propose/references/: enrichment-playbook.md  findings-format.md
skills/tailrocks-reconcile/: SKILL.md
skills/tailrocks-reconcile/agents/: openai.yaml
skills/tailrocks-reconcile/evals/: evals.json
skills/tailrocks-record-decision/: SKILL.md
skills/tailrocks-record-decision/agents/: openai.yaml
skills/tailrocks-record-decision/evals/: evals.json
skills/tailrocks-remediate/: SKILL.md
skills/tailrocks-remediate/agents/: openai.yaml
skills/tailrocks-remediate/evals/: evals.json
skills/tailrocks-remediate/references/: principles-and-evidence.md
skills/tailrocks-research/: SKILL.md
skills/tailrocks-research/agents/: openai.yaml
skills/tailrocks-research/evals/: evals.json
skills/tailrocks-rust-best-practices/: SKILL.md
skills/tailrocks-rust-project-setup/: SKILL.md
skills/tailrocks-rust-project-setup/templates/: Cargo.toml  clippy.toml  mise.toml  rust-toolchain.toml
skills/tailrocks-tanstack-project-setup/: SKILL.md
skills/tailrocks-typescript-best-practices/: SKILL.md
(+74 files in other folders)
